# pirpy

./: LICENSE.md  README.md  pyproject.toml
src/pirpy/: __init__.py  logging_config.py  pirpy.py
